--- a/todo.html
+++ b/todo.html
@@ -38,12 +38,12 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="./homePage.html">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li class="active"><a href="#">To-Do</a></li>
             <li><a href="./analyze.html">Analyze Time</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <button type="button" class="btn btn-default navbar-btn">Start New Activity</button>
+            <button type="button" class="btn btn-primary navbar-btn">Track New Activity</button>
 
             <button type="button" class="btn btn-default navbar-btn">End Current Activity</button>
           </ul>
