--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <li><a href="./analyze.html">Analyze Time</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <a href="#" type="button" class="btn btn-primary navbar-btn track">Track New Activity</a>
+            <button type="button" class="btn btn-primary navbar-btn track">Track New Activity</button>
             <button type="button" class="btn btn-default navbar-btn">End Current Activity</button>
           </ul>
         </div><!--/.nav-collapse -->
