--- a/todo.html
+++ b/todo.html
@@ -34,7 +34,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="./homePage.html">Time Tracker</a>
+          <a class="navbar-brand" href="./index.html">Time Tracker</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -44,7 +44,6 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <button type="button" class="btn btn-primary navbar-btn">Track New Activity</button>
-
             <button type="button" class="btn btn-default navbar-btn">End Current Activity</button>
           </ul>
         </div><!--/.nav-collapse -->
