Added sessionStorage functionality

--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
       </div>
     </div>
 
+    <!-- <div id="test">
+      no data in sessionStorage
+    </div> -->
+
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
