--- a/analyze.html
+++ b/analyze.html
@@ -44,7 +44,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <button type="button" class="btn btn-primary navbar-btn">Track New Activity</button>
-            <button type="button" class="btn btn-default navbar-btn">End Current Activity</button>
+            <button type="button" class="btn btn-default navbar-btn">Stop Tracking</button>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
