--- a/currActivity.html
+++ b/currActivity.html
@@ -38,13 +38,13 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="./index.html">Home</a></li>
             <li><a href="./todo.html">To-Do</a></li>
             <li><a href="./analyze.html">Analyze Time</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <button type="button" class="btn btn-primary navbar-btn">Track New Activity</button>
-            <a href="./homepage_timeline.html" type="button" class="btn btn-default navbar-btn">End Current Activity</a>
+            <a href="./homepage_timeline.html" type="button" class="btn btn-default navbar-btn">Stop Tracking</a>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -56,27 +56,28 @@
         <li data-date='Feb. 10, 2017' class='step col-sm-12 orange'>
           <!-- <div>Inserted</div> -->
           <div class='tasks container-fluid'>
-              <div class='task col-sm-3'>Working on EECS 330</div>
+              <div class='task col-sm-3'>Untitled</div>
           </div>
         </li>
     </div>
 
-    <div class="col-lg-4">
+    <div class="col-sm-4">
         <span class="pull-right">
           <a href="./index.html" type="button" class="btn btn-default" aria-label="Left Align">
             <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>
           </a>
         </span>
     </div>
-    <div class="col-lg-4 container">
+    <div class="col-sm-4 container">
       <!-- Main component for a primary marketing message or call to action -->
       <div class="row jumbotron">
-        <div class="text-center" style="font-size:36px;">Current Activity</div>
+        <div class="text-center" style="font-size:30px; margin-top: -17px;">Current Activity</div>
         <div class="panel panel-default">
-          <div class="panel-body text-center" style="font-size:16px;" id="test">Working on EECS 330</div>
+          <div class="panel-body text-center" style="font-size:16px;" id="test">Nothing yet!</div>
         </div>
         <h2><pre class="text-center" style="font-size: 36px">0 : 00</pre></h2>
         <h3 class="text-center">HR : MIN</h3>
+        <a href="./homepage_timeline.html" class="btn btn-lg btn-default center-block track" role="button">Stop Tracking</a>
       </div>
     </div> <!-- /container -->
     <!-- <div id="test">
