--- a/homepage_timeline.html
+++ b/homepage_timeline.html
@@ -43,8 +43,8 @@
             <li><a href="./analyze.html">Analyze Time</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <a href="#" type="button" class="btn btn-primary navbar-btn track">Track New Activity</a>
-            <button type="button" class="btn btn-default navbar-btn">End Current Activity</button>
+            <!-- <a href="#" type="button" class="btn btn-primary navbar-btn track">Track New Activity</a>
+            <button type="button" class="btn btn-default navbar-btn">Stop Tracking</button> -->
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -53,10 +53,10 @@
 
     <div class='container-fluid timeline'>
       <ul class='htimeline'>
-        <li data-date='Feb. 10, 2017' class='step col-sm-12 orange'>
+        <li data-date='Feb. 17, 2017' class='step col-sm-12 blue'>
           <!-- <div>Inserted</div> -->
           <div class='tasks container-fluid'>
-              <div class='task col-sm-3'>Working on EECS 330</div>
+              <div class='task col-sm-3' id="timeline">Untitled</div>
           </div>
         </li>
       </ul>
@@ -72,9 +72,9 @@
             <input type="text" class="form-control" id="input" aria-describedby="" placeholder="Enter Activity">
           </div>
         </form>
-        <a class="btn btn-lg btn-primary center-block track" role="button">TRACK ACTIVITY</a>
         <h2><pre class="text-center" style="font-size: 36px">0 : 00</pre></h2>
         <h2 class="text-center">HR : MIN</h2>
+        <a class="btn btn-lg btn-primary center-block track" role="button">TRACK ACTIVITY</a>
       </div>
     </div> <!-- /container -->
 
