--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <li><a href="./analyze.html">Analyze Time</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <button type="button" class="btn btn-primary navbar-btn track">Track New Activity</button>
-            <button type="button" class="btn btn-default navbar-btn">End Current Activity</button>
+            <!-- <button type="button" class="btn btn-primary navbar-btn track">Track New Activity</button>
+            <button type="button" class="btn btn-default navbar-btn">Stop Tracking</button> -->
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -71,13 +71,14 @@
             <input type="text" class="form-control" id="input" aria-describedby="" placeholder="Enter Activity">
           </div>
         </form>
-        <a class="btn btn-lg btn-primary center-block track" role="button">TRACK ACTIVITY</a>
         <h2><pre class="text-center" style="font-size: 36px">0 : 00</pre></h2>
         <h2 class="text-center">HR : MIN</h2>
+        <br>
+        <a class="btn btn-lg btn-primary center-block track" role="button">TRACK ACTIVITY</a>
       </div>
     </div> <!-- /container -->
 
-    <div class="col-lg-4">
+    <div class="col-sm-4">
       <div class="alert alert-danger">
         <strong>Warning!</strong> Enter an activity before you start tracking.
       </div>
