--- a/todo.html
+++ b/todo.html
@@ -16,6 +16,7 @@
 
     <!-- Custom styles for this template -->
     <link href="time_tracker.css" rel="stylesheet">
+    <link href="todo.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="./docs/assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -44,17 +45,33 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <button type="button" class="btn btn-primary navbar-btn">Track New Activity</button>
-            <button type="button" class="btn btn-default navbar-btn">End Current Activity</button>
+            <button type="button" class="btn btn-default navbar-btn">Stop Tracking</button>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
-    <div class="container">
+    <!-- <div class="container"> -->
 
-        TODO PAGE UNDER CONSTRUCTION
+      <div class="col-lg-4 col-sm-offset-4 container">
+      <!-- Main component for a primary marketing message or call to action -->
+        <div class="row jumbotron">
+          <form>
+            <div class="form-group">
+              <h1> TO-DO LIST </h1>
+              <label for=""></label>
+              <input type="text" class="form-control" id="input" aria-describedby="" placeholder="Enter Task">
+              <input type="text" class="form-control" id="input" aria-describedby="" placeholder="Enter Task">
+              <input type="text" class="form-control" id="input" aria-describedby="" placeholder="Enter Task">
+              <input type="text" class="form-control" id="input" aria-describedby="" placeholder="Enter Task">
+              <input type="text" class="form-control" id="input" aria-describedby="" placeholder="Enter Task">
+            </div>
+          </form>
+          <a class="btn btn-lg btn-primary center-block track" role="button">ADD TASK(S)</a>
+        </div>
+      </div>
 
-    </div> <!-- /container -->
+    <!-- </div> <! /container -->
 
 
     <!-- Bootstrap core JavaScript
