p7 studio ready version

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <li data-date='Feb. 10, 2017' class='step col-sm-12 orange'>
           <!-- <div>Inserted</div> -->
           <div class='tasks container-fluid'>
-              <div class='task col-sm-3'>Working on EECS 330</div>
+              <div class='task col-sm-3'>Blank</div>
           </div>
         </li>
     </div>
@@ -65,18 +65,19 @@
     <div class="col-lg-4 col-sm-offset-4 container">
     <!-- Main component for a primary marketing message or call to action -->
       <div class="row jumbotron">
-        <a class="btn btn-lg btn-primary center-block" role="button" href="./todo_listed.html">Choose from TO-DO</a>
-        <h2 class="text-center">-OR-</h2>
+        <h1 style="font-size:45px"> TIME TRACKER </h1>
         <form>
           <div class="form-group">
             <label for=""></label>
             <input type="text" class="form-control" id="input" aria-describedby="" placeholder="Enter Activity">
           </div>
         </form>
-        <h2><pre class="text-center" style="font-size: 36px">0 : 00</pre></h2>
-        <h2 class="text-center">HR : MIN</h2>
-        <br>
+        <!-- <h2><pre class="text-center" style="font-size: 36px">0 : 00</pre></h2>
+        <h2 class="text-center">HR : MIN</h2> -->
         <a class="btn btn-lg btn-primary center-block track" role="button">TRACK ACTIVITY</a>
+        <h2 class="text-center">&mdash; OR &mdash;</h2>
+        <br>
+        <a class="btn btn-lg btn-primary center-block" role="button" href="./todo_listed.html">CHOOSE FROM TO-DO</a>
       </div>
     </div> <!-- /container -->
 
