--- a/analyze.html
+++ b/analyze.html
@@ -16,7 +16,7 @@
 
     <!-- Custom styles for this template -->
     <link href="time_tracker.css" rel="stylesheet">
-
+    <link href="analyze.css" rel="stylesheet">
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="./docs/assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <!-- <script src="./docs/assets/js/ie-emulation-modes-warning.js"></script> -->
@@ -43,7 +43,7 @@
             <li class="active"><a href="#about">Analyze Time</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <button type="button" class="btn btn-primary navbar-btn">Track New Activity</button>
+            <a href="./index.html" type="button" class="btn btn-primary navbar-btn">Track New Activity</a>
             <button type="button" class="btn btn-default navbar-btn">Stop Tracking</button>
           </ul>
         </div><!--/.nav-collapse -->
@@ -52,7 +52,8 @@
 
     <div class="container">
 
-        ANALYZE TIME PAGE UNDER CONSTRUCTION
+        <img id="pieChart" src="./graphs/pieChart.png" alt="Pie Chart" style="width:50%;height:50%;">
+        <img id="barGraph" src="./graphs/barGraph.png" alt="Bar Graph" style="width:50%;height:50%;">
 
     </div> <!-- /container -->
 
