--- a/todo_listed.html
+++ b/todo_listed.html
@@ -31,6 +31,16 @@
 
   <body>
 
+    <div class='container-fluid timeline' style="visibility:hidden;">
+      <ul class='htimeline'>
+        <li data-date='' class='step col-sm-12 orange'>
+          <!-- <div>Inserted</div> -->
+          <div class='tasks container-fluid'>
+              <div class='task col-sm-3'></div>
+          </div>
+        </li>
+    </div>
+
     <!-- Fixed navbar -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
@@ -44,7 +54,7 @@
             <li><a href="./analyze.html">Analyze Time</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <button type="button" class="btn btn-primary navbar-btn">Track New Activity</button>
+            <a href="./index.html" type="button" class="btn btn-primary navbar-btn">Track New Activity</a>
             <button type="button" class="btn btn-default navbar-btn">Stop Tracking</button>
           </ul>
         </div><!--/.nav-collapse -->
@@ -57,14 +67,14 @@
       <!-- Main component for a primary marketing message or call to action -->
         <div class="row jumbotron" id=todo>
           <form>
-            <div class="form-group">
-              <h1> TO-DO LIST </h1>
+            <div class="form-group row">
+              <h1 style="font-size:45px"> TO-DO LIST </h1>
 
-              <label class="checkbox cb0">
+              <label class="checkbox col-lg-1 cb0 ">
                  <input type="checkbox" value="__option__">
               </label>
               <!-- <a type="text" id="input0" aria-describedby=""></a> -->
-              <a href="./currActivity.html" class="" id="input0" role="button"></a>
+              <a href="./currActivity.html" class="btn btn-lg btn-default col-lg-11"  id="input0" onclick="updateStorage()" role="button"></a>
 <br>
               <label class="checkbox cb1">
                 <input type="checkbox" name="keywords" value="__option__">
@@ -104,5 +114,6 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="./docs/assets/js/ie10-viewport-bug-workaround.js"></script>
     <script src="./todo.js"></script>
+    <script src="./proto1.js"></script>
   </body>
 </html>
