--- a/analyze.html
+++ b/analyze.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>TimeTracker</title>
+    <title>TRACK IT!</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./docs/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -34,12 +34,12 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="./index.html">Time Tracker</a>
+          <a class="navbar-brand" href="./index.html">TRACK IT!</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="./index.html">Home</a></li>
-            <li><a href="./todo.html">To-Do</a></li>
+            <li><a href="./todo_listed.html">To-Do</a></li>
             <li class="active"><a href="#about">Analyze Time</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
