--- a/currActivity.html
+++ b/currActivity.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>TimeTracker</title>
+    <title>TRACK IT!</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./docs/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -28,18 +28,18 @@
     <![endif]-->
   </head>
 
-  <body>
+  <body onload="stopWatch()">
 
     <!-- Fixed navbar -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="./index.html">Time Tracker</a>
+          <a class="navbar-brand" href="./index.html">TRACK IT!</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="./index.html">Home</a></li>
-            <li><a href="./todo.html">To-Do</a></li>
+            <li><a href="./todo_listed.html">To-Do</a></li>
             <li><a href="./analyze.html">Analyze Time</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -71,11 +71,11 @@
     <div class="col-sm-4 container">
       <!-- Main component for a primary marketing message or call to action -->
       <div class="row jumbotron">
-        <div class="text-center" style="font-size:30px; margin-top: -17px;">Current Activity</div>
+        <h1 class="text-center" style="font-size:30px; margin-top: -17px;">CURRENT ACTIVITY</h1>
         <div class="panel panel-default">
           <div class="panel-body text-center" style="font-size:16px;" id="currAct">Nothing yet!</div>
         </div>
-        <h2><pre class="text-center" style="font-size: 36px">00 : 00 : 00<p style="margin-left:0px">H       M       S</p></pre></h2>
+        <h2><pre class="text-center" id="countUp" style="font-size: 36px">00 : 00 : 00<p>H       M       S</p></pre></h2>
         <!-- <h3 class="text-center">HR  :  MIN  :  SEC</h3> -->
         <a href="./homepage_timeline.html" class="btn btn-lg btn-default center-block track" role="button">Stop Tracking</a>
       </div>
@@ -92,7 +92,9 @@
     <script src="./docs/dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="./docs/assets/js/ie10-viewport-bug-workaround.js"></script>
+    <!-- <script src="./proto1.js"></script> -->
     <script src="./proto1.js"></script>
     <script src="./todo.js"></script>
+    <script src="./stopwatch.js"></script>
   </body>
 </html>
