--- a/homepage_timeline.html
+++ b/homepage_timeline.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>TimeTracker</title>
+    <title>TRACK IT!</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./docs/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -28,18 +28,18 @@
     <![endif]-->
   </head>
 
-  <body>
+  <body onload="gDate()">
 
     <!-- Fixed navbar -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Time Tracker</a>
+          <a class="navbar-brand" href="#">TRACK IT!</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="./todo.html">To-Do</a></li>
+            <li><a href="./todo_listed.html">To-Do</a></li>
             <li><a href="./analyze.html">Analyze Time</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -53,7 +53,7 @@
 
     <div class='container-fluid timeline'>
       <ul class='htimeline'>
-        <li data-date='Feb. 24, 2017' class='step col-sm-12 blue'>
+        <li data-date="" class='step col-sm-12 blue' id="date">
           <!-- <div>Inserted</div> -->
           <div class='tasks container-fluid'>
               <div class='task col-sm-3' id="timeline">Untitled</div>
@@ -66,11 +66,10 @@
     <div class="col-lg-4 col-sm-offset-4 container">
     <!-- Main component for a primary marketing message or call to action -->
       <div class="row jumbotron">
-        <h1 style="font-size:45px"> TIME TRACKER </h1>
+        <h1 style="font-size:45px"> TRACK IT!</h1>
         <form>
           <div class="form-group">
-            <label for=""></label>
-            <input type="text" class="form-control" id="input" aria-describedby="" placeholder="Enter Activity">
+            <input type="text" name="Enter Activity" class="form-control" id="input" aria-describedby="" placeholder="Enter Activity">
           </div>
         </form>
         <!-- <h2><pre class="text-center" style="font-size: 36px">0 : 00</pre></h2>
