--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>TimeTracker</title>
+    <title>TRACK IT!</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./docs/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -34,12 +34,12 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Time Tracker</a>
+          <a class="navbar-brand" href="#">TRACK IT!</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="./todo.html">To-Do</a></li>
+            <li><a href="./todo_listed.html">To-Do</a></li>
             <li><a href="./analyze.html">Analyze Time</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -65,16 +65,15 @@
     <div class="col-lg-4 col-sm-offset-4 container">
     <!-- Main component for a primary marketing message or call to action -->
       <div class="row jumbotron">
-        <h1 style="font-size:45px"> TIME TRACKER </h1>
+        <h1 style="font-size:45px"> TRACK IT! </h1>
         <form>
           <div class="form-group">
-            <label for=""></label>
-            <input type="text" class="form-control" id="input" aria-describedby="" placeholder="Enter Activity">
+            <input type="text" name="Enter Activity" class="form-control" aria-describedby="" placeholder="Enter Activity">
           </div>
         </form>
         <!-- <h2><pre class="text-center" style="font-size: 36px">0 : 00</pre></h2>
         <h2 class="text-center">HR : MIN</h2> -->
-        <a class="btn btn-lg btn-primary center-block track" role="button">TRACK ACTIVITY</a>
+        <a class="btn btn-lg btn-primary center-block" onclick="track()" role="button">TRACK ACTIVITY</a>
         <h2 class="text-center">&mdash; OR &mdash;</h2>
         <br>
         <a class="btn btn-lg btn-primary center-block" role="button" href="./todo_listed.html">CHOOSE FROM TO-DO</a>
@@ -82,10 +81,14 @@
     </div> <!-- /container -->
 
     <div class="col-sm-4">
-      <div class="alert alert-danger">
+      <div class="alert alert-danger alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
         <strong>Warning!</strong> Enter an activity before you start tracking.
       </div>
     </div>
+
 
     <!-- <div id="test">
       no data in sessionStorage
