--- a/todo.html
+++ b/todo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>TimeTracker</title>
+    <title>TRACK IT!</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./docs/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -45,12 +45,12 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="./index.html">Time Tracker</a>
+          <a class="navbar-brand" href="./index.html">TRACK IT!</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="./index.html">Home</a></li>
-            <li class="active"><a href="#">To-Do</a></li>
+            <li class="active"><a href="./todo_listed.html">To-Do</a></li>
             <li><a href="./analyze.html">Analyze Time</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -62,27 +62,51 @@
     </nav>
 
     <!-- <div class="container"> -->
+    <div class="col-sm-4">
+        <span class="pull-right">
+          <a href="./todo_listed.html" type="button" class="btn btn-default" aria-label="Left Align">
+            <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>
+          </a>
+        </span>
+    </div>
 
-      <div class="col-lg-4 col-sm-offset-4 container">
-      <!-- Main component for a primary marketing message or call to action -->
-        <div class="row jumbotron" id="todo">
-          <form>
-            <div class="form-group">
-              <h1 style="font-size:45px"> TO-DO LIST </h1>
+    <div class="col-sm-4 container">
+    <!-- Main component for a primary marketing message or call to action -->
+      <div class="row jumbotron">
+        <form>
+          <div class="row form-group">
+            <h1 style="font-size:45px"> TO-DO LIST </h1>
+            <div class="col-sm-11">
               <input type="text" name="spot 1" class="form-control" id=taskShow aria-describedby="" placeholder="Enter Task">
+            </div>
+            <a class="btn btn-sm btn-primary center-block col-sm-1 " id="plus-1" onclick="show()"  role="button">&plus;</a>
+
+            <div class="col-sm-11">
               <input type="text" name="spot 2" class="form-control task" id="task0" aria-describedby="" placeholder="Enter Task">
+            </div>
+            <a class="btn btn-sm btn-primary center-block col-sm-1 task" id="plus0" onclick="show()"  role="button">&plus;</a>
+
+            <div class="col-sm-11">
               <input type="text" name="spot 3" class="form-control task" id="task1" aria-describedby="" placeholder="Enter Task">
+            </div>
+            <a class="btn btn-sm btn-primary center-block col-sm-1 task" id="plus1" onclick="show()"  role="button">&plus;</a>
+
+            <div class="col-sm-11">
               <input type="text" name="spot 4" class="form-control task" id="task2" aria-describedby="" placeholder="Enter Task">
+            </div>
+            <a class="btn btn-sm btn-primary center-block col-sm-1 task" id="plus2" onclick="show()"  role="button">&plus;</a>
+
+            <div class="col-sm-11">
               <input type="text" name="spot 5" class="form-control task" id="task3" aria-describedby="" placeholder="Enter Task">
             </div>
-            <!-- <input name="bar" value="enter some shit" /> -->
+            <!-- <a class="btn btn-sm btn-primary center-block col-sm-1 task" id="plus3" onclick="show()"  role="button">&plus;</a> -->
+            <a class="btn btn-lg btn-primary center-block col-sm-12" onclick="submit()"  role="button">SAVE</a>
 
-          </form>
-          <a class="btn btn-lg btn-primary center-block" onclick="show()"  role="button">&plus;</a>
-          <br>
-          <a class="btn btn-lg btn-primary center-block" onclick="submit()"  role="button">SAVE</a>
-        </div>
+          </div>
+          <!-- <input name="bar" value="enter some shit" /> -->
+        </form>
       </div>
+    </div>
 
     <!-- </div> <! /container -->
 
