--- a/todo_listed.html
+++ b/todo_listed.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>TimeTracker</title>
+    <title>TRACK IT!</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./docs/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -45,12 +45,12 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="./index.html">Time Tracker</a>
+          <a class="navbar-brand" href="./index.html">TRACK IT!</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="./index.html">Home</a></li>
-            <li class="active"><a href="./todo.html">To-Do</a></li>
+            <li class="active"><a href="#">To-Do</a></li>
             <li><a href="./analyze.html">Analyze Time</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -65,37 +65,53 @@
 
       <div class="col-sm-4 col-sm-offset-4 container">
       <!-- Main component for a primary marketing message or call to action -->
-        <div class="row jumbotron" id=todo>
+        <div class="row jumbotron">
           <form>
             <div class="row form-group">
               <h1 style="font-size:45px"> TO-DO LIST </h1>
 
               <label class="checkbox col-sm-1" id="cb0">
-                 <input type="checkbox" id="ch0" value="__option__">
-              <!-- <a type="text" id="input0" aria-describedby=""></a> -->
-            </label>
+                  <!-- <input type="checkbox" id="ch0" name="keywords" value="__option__"> -->
+                <button type="button" class="close"  aria-label="Close" style="margin-top:-8px;">
+                  <span class="text-danger" id="ch0" aria-hidden="true">&times;</span>
+                </button>
+              </label>
+            <!-- </div> -->
               <a class="btn btn-lg btn-default col-sm-11 td"  id="input0"  role="button"></a>
-<br>
+
               <label class="checkbox col-sm-1" id="cb1">
-                <input type="checkbox" id="ch1" name="keywords" value="__option__">
+                  <!-- <input type="checkbox" id="ch1" name="keywords" value="__option__"> -->
+                <button type="button" class="close"  aria-label="Close" style="margin-top:-8px;">
+                  <span class="text-danger" id="ch1" aria-hidden="true">&times;</span>
+                </button>
               </label>
               <a class="btn btn-lg btn-default col-sm-11 td"  id="input1"  role="button"></a>
-<br>
+
               <label class="checkbox col-sm-1" id="cb2">
-                <input type="checkbox" id="ch2" name="keywords" value="__option__">
+                <!-- <input type="checkbox" id="ch2" name="keywords" value="__option__"> -->
+                <button type="button" class="close"  aria-label="Close" style="margin-top:-8px;">
+                  <span class="text-danger" id="ch2" aria-hidden="true">&times;</span>
+                </button>
               </label>
               <a class="btn btn-lg btn-default col-sm-11 td"  id="input2"  role="button"></a>
-<br>
+
               <label class="checkbox col-sm-1" id="cb3">
-                <input type="checkbox" id="ch3" name="keywords" value="__option__">
+                <!-- <input type="checkbox" id="ch3" name="keywords" value="__option__"> -->
+                <button type="button" class="close"  aria-label="Close" style="margin-top:-8px;">
+                  <span class="text-danger" id="ch3" aria-hidden="true">&times;</span>
+                </button>
               </label>
               <a class="btn btn-lg btn-default col-sm-11 td"  id="input3"  role="button"></a>
-<br>
+
               <label class="checkbox col-sm-1" id="cb4">
-                <input type="checkbox" id="ch4" name="keywords" value="__option__">
+                <!-- <input type="checkbox" id="ch4" name="keywords" value="__option__"> -->
+                <button type="button" class="close"  aria-label="Close" style="margin-top:-8px;">
+                  <span class="text-danger" id="ch4" aria-hidden="true">&times;</span>
+                </button>
               </label>
-              <a class="btn btn-lg btn-default col-sm-11 td"  id="input4"  role="button"></a>
-<br>
+              <a class="btn btn-lg btn-default col-sm-11 td" id="input4"  role="button"></a>
+
+              <a href="./todo.html" class="btn btn-lg btn-primary col-sm-12" role="button">ADD TASKS</a>
             </div>
           </form>
           <!-- <a class="btn btn-lg btn-primary center-block track" role="button">TRACK</a> -->
@@ -113,7 +129,7 @@
     <script src="./docs/dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="./docs/assets/js/ie10-viewport-bug-workaround.js"></script>
-    <script src="./todo.js"></script>
     <script src="./proto1.js"></script>
+    <script src="./todo.js"></script>
   </body>
 </html>
