--- a/index.html
+++ b/index.html
@@ -68,14 +68,13 @@
         <h1 style="font-size:45px"> TRACK IT! </h1>
         <form>
           <div class="form-group">
-            <input type="text" name="Enter Activity" class="form-control" aria-describedby="" placeholder="Enter Activity">
+            <input type="text" name="Enter Activity" class="form-control" aria-describedby="" placeholder="Enter New Activity">
           </div>
         </form>
         <!-- <h2><pre class="text-center" style="font-size: 36px">0 : 00</pre></h2>
         <h2 class="text-center">HR : MIN</h2> -->
         <a class="btn btn-lg btn-primary btn-block" onclick="track()" role="button">TRACK ACTIVITY</a>
-        <h2 class="text-center">&mdash; OR &mdash;</h2>
-        <br>
+        <h2 class="text-center" style="padding-bottom:10px;">&mdash; OR &mdash;</h2>
         <a class="btn btn-lg btn-primary btn-block" role="button" href="./todo_listed.html">CHOOSE FROM TO-DO</a>
       </div>
     </div> <!-- /container -->
