Reorganized files so index.html works on pages

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="../track_it/homepage.html">
+									<a href="./track_it/homepage.html">
 										<h2>TRACK IT!</h2>
 										<div class="content">
 											<p>Final project for EECS 330 - Human Computer Interaction with Michael Horn</p>
