Simplified html for index, generic, and block

--- a/generic.html
+++ b/generic.html
@@ -23,38 +23,38 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="index.html" class="logo">
+								<!-- <a href="index.html" class="logo">
 									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Khoa Truong</span>
-								</a>
+								</a> -->
 
 							<!-- Nav -->
-								<nav>
+								<!-- <nav>
 									<ul>
 										<li><a href="#menu">Menu</a></li>
 									</ul>
-								</nav>
+								</nav> -->
 
 						</div>
 					</header>
 
 				<!-- Menu -->
-					<nav id="menu">
+					<!-- <nav id="menu">
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="generic.html">About</a></li>
-							<!-- <li><a href="generic.html">Tempus etiam</a></li>
+							<li><a href="generic.html">Tempus etiam</a></li>
 							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li> -->
+							<li><a href="elements.html">Elements</a></li>
 						</ul>
-					</nav>
+					</nav> -->
 
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
 							<h1>Live at the Art Circle, It's the Northwestern Tour Guides!</h1>
 							<h2>A location-based QR code project</h2>
-							<span class="image main"><img align="right" src="images/QR_code_map.png" alt="QR Code Map" style="width:45%;height:45%;margin-left:3%;"/></span>
+							<span class="image main"><img align="right" src="images/QR_code_map.PNG" alt="QR Code Map" style="width:45%;height:45%;margin-left:3%;"/></span>
 							<p>Ever wondered what it's like being a Northwestern tour guide? Well, it doesn't matter.
 								 Today you will take on the role of a lifetime and give a unique tour of the sites around the Art Circle!
 								 Don't worry. There aren't actual people waiting for you outside. Instead, we're going to stream this live on Facebook for all the prospies and their families to see!
@@ -92,9 +92,9 @@
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
+					<!-- <footer id="footer">
 						<div class="inner">
-							<!-- <section>
+							<section>
 								<h2>Get in touch</h2>
 								<form method="post" action="#">
 									<div class="field half first">
@@ -110,26 +110,26 @@
 										<li><input type="submit" value="Send" class="special" /></li>
 									</ul>
 								</form>
-							</section> -->
+							</section>
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-									<!-- <li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li> -->
-									<!-- <li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li> -->
-									<!-- <li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li> -->
 									<li><a href="https://www.linkedin.com/in/khoa-truong-8a503689/" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<!-- <li><a href="#" class="icon style2 fa-github"><span class="label">GitHub</span></a></li> -->
-									<!-- <li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li> -->
-									<!-- <li><a href="#" class="icon style2 fa-phone"><span class="label">Phone</span></a></li> -->
-									<!-- <li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li> -->
+									<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="#" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
+									<li><a href="#" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
+									<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
-								<!-- <li>&copy; Untitled. All rights reserved</li> -->
+								<li>&copy; Untitled. All rights reserved</li>
 								<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
-					</footer>
+					</footer> -->
 
 			</div>
 
