--- a/index.html
+++ b/index.html
@@ -25,31 +25,31 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="index.html" class="logo">
+								<!-- <a href="index.html" class="logo">
 									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Khoa Truong</span>
-								</a>
+								</a> -->
 
 							<!-- Nav -->
-								<nav>
+								<!-- <nav>
 									<ul>
 										<li><a href="#menu">Menu</a></li>
 									</ul>
-								</nav>
+								</nav> -->
 
 						</div>
 					</header>
 
 				<!-- Menu -->
-					<nav id="menu">
+					<!-- <nav id="menu">
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="generic.html">About</a></li>
-							<!-- <li><a href="generic.html">Projects</a></li>
+							<li><a href="generic.html">Projects</a></li>
 							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li> -->
+							<li><a href="elements.html">Elements</a></li>
 						</ul>
-					</nav>
+					</nav> -->
 
 				<!-- Main -->
 					<div id="main">
@@ -61,9 +61,9 @@
 							</header>
 							<section class="tiles">
 								<article class="style1">
-									<span class="image">
+									<!-- <span class="image">
 										<img src="images/pic01.jpg" alt="" />
-									</span>
+									</span> -->
 									<a href="generic.html">
 										<h2>Alternative Reality Storytelling</h2>
 										<div class="content">
@@ -72,9 +72,9 @@
 									</a>
 								</article>
 								<article class="style2">
-									<span class="image">
+									<!-- <span class="image">
 										<img src="images/pic02.jpg" alt="" />
-									</span>
+									</span> -->
 									<a href="./track_it/homepage.html">
 										<h2>TRACK IT!</h2>
 										<div class="content">
@@ -197,9 +197,9 @@
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
+					<!-- <footer id="footer">
 						<div class="inner">
-							<!-- <section>
+							<section>
 								<h2>Get in touch</h2>
 								<form method="post" action="#">
 									<div class="field half first">
@@ -215,26 +215,26 @@
 										<li><input type="submit" value="Send" class="special" /></li>
 									</ul>
 								</form>
-							</section> -->
+							</section>
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-									<!-- <li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li> -->
-									<!-- <li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li> -->
-									<!-- <li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li> -->
 									<li><a href="#" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<!-- <li><a href="#" class="icon style2 fa-github"><span class="label">GitHub</span></a></li> -->
-									<!-- <li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li> -->
-									<!-- <li><a href="#" class="icon style2 fa-phone"><span class="label">Phone</span></a></li> -->
-									<!-- <li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li> -->
+									<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="#" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
+									<li><a href="#" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
+									<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
-								<!-- <li>&copy; Untitled. All rights reserved</li> -->
+								<li>&copy; Untitled. All rights reserved</li>
 								<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
-					</footer>
+					</footer> -->
 
 			</div>
 
