--- a/tour_guide_pages/block.html
+++ b/tour_guide_pages/block.html
@@ -23,31 +23,31 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="../index.html" class="logo">
+								<!-- <a href="../index.html" class="logo">
 									<span class="symbol"><img src="../images/logo.svg" alt="" /></span><span class="title">Khoa Truong</span>
-								</a>
+								</a> -->
 
 							<!-- Nav -->
-								<nav>
+								<!-- <nav>
 									<ul>
 										<li><a href="#menu">Menu</a></li>
 									</ul>
-								</nav>
+								</nav> -->
 
 						</div>
 					</header>
 
 				<!-- Menu -->
-					<nav id="menu">
+					<!-- <nav id="menu">
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="../index.html">Home</a></li>
 							<li><a href="../generic.html">About</a></li>
-							<!-- <li><a href="generic.html">Tempus etiam</a></li>
+							<li><a href="generic.html">Tempus etiam</a></li>
 							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li> -->
+							<li><a href="elements.html">Elements</a></li>
 						</ul>
-					</nav>
+					</nav> -->
 
 				<!-- Main -->
 					<div id="main">
@@ -69,9 +69,9 @@
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
+					<!-- <footer id="footer">
 						<div class="inner">
-							<!-- <section>
+							<section>
 								<h2>Get in touch</h2>
 								<form method="post" action="#">
 									<div class="field half first">
@@ -87,26 +87,26 @@
 										<li><input type="submit" value="Send" class="special" /></li>
 									</ul>
 								</form>
-							</section> -->
+							</section>
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-									<!-- <li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li> -->
-									<!-- <li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li> -->
-									<!-- <li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li> -->
 									<li><a href="https://www.linkedin.com/in/khoa-truong-8a503689/" target="_blank" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<!-- <li><a href="#" class="icon style2 fa-github"><span class="label">GitHub</span></a></li> -->
-									<!-- <li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li> -->
-									<!-- <li><a href="#" class="icon style2 fa-phone"><span class="label">Phone</span></a></li> -->
-									<!-- <li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li> -->
+									<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="#" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
+									<li><a href="#" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
+									<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
-								<!-- <li>&copy; Untitled. All rights reserved</li> -->
+								<li>&copy; Untitled. All rights reserved</li>
 								<li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
 							</ul>
 						</div>
-					</footer>
+					</footer> -->
 
 			</div>
 
