Updates to the tour guide pages

--- a/tour_guide_pages/block.html
+++ b/tour_guide_pages/block.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="../assets/css/main.css" />
+		<!-- <link rel="stylesheet" href="../assets/css/main.css" /> -->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
@@ -53,15 +53,15 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Block Museum Instructions</h1>
-							<span class="image main"><img src="http://blockmuseum.northwestern.edu/images/visit/buildingshot.jpg" alt="Image of Block Museum"/></span>
-							<p>You can read straight from their website here:<br>
+							<span class="image main"><img align="right" src="http://blockmuseum.northwestern.edu/images/visit/buildingshot.jpg" alt="Image of Block Museum"/></span>
+							<p>Talk about the Block Museum by reading directly from this website:<br>
 								 <a href="http://www.blockmuseum.northwestern.edu/about/index.html">About the Block Museum</a><br>
 							<br>Or do whatever you want, including but not limited to:
 						 <ul>
 							 <li>Lying (make up something)</li>
 						 	 <li>Talk about art that inspires you.</li>
-						 	 <li>Quickly describe your first time at a museum.</li>
-							 <li>Become an exhibit.</li>
+						 	 <li>Tell the story of your first time at a museum.</li>
+							 <li>Become an exhibit (whatever that means to you).</li>
 						</ul>
 						Talk loudly, and don't forget to take the camera to the next location when you're done!
 					 	 </p>
@@ -111,11 +111,11 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="../assets/js/jquery.min.js"></script>
+			<!-- <script src="../assets/js/jquery.min.js"></script>
 			<script src="../assets/js/skel.min.js"></script>
-			<script src="../assets/js/util.js"></script>
+			<script src="../assets/js/util.js"></script> -->
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="../assets/js/main.js"></script>
+			<!-- <script src="../assets/js/main.js"></script> -->
 
 	</body>
 </html>
