--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<!-- <link rel="stylesheet" href="assets/css/main.css" /> -->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
@@ -75,7 +75,7 @@
 									<!-- <span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span> -->
-									<a href="./track_it/homepage.html">
+									<a href="track_it/homepage.html">
 										<h2>TRACK IT!</h2>
 										<div class="content">
 											<p>Final project for EECS 330 - Human Computer Interaction with Michael Horn</p>
@@ -239,11 +239,11 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
+			<!-- <script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
+			<script src="assets/js/util.js"></script> -->
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+			<!-- <script src="assets/js/main.js"></script> -->
 
 	</body>
 </html>
