Adjusting responsiveness on images for a couple of htmls

--- a/tour_guide_pages/chicago.html
+++ b/tour_guide_pages/chicago.html
@@ -53,7 +53,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Chicago Skyline Instructions</h1>
-							<span class="image main"><img align="right" src="http://wikitravel.org/upload/shared//6/62/View_from_Montrose_Point.png" alt="Image of Chicago Skyline"/></span>
+							<span class="image main"><img align="right" src="http://wikitravel.org/upload/shared//6/62/View_from_Montrose_Point.png" style="width:60%;height:60%;margin-right:3%" alt="Image of Chicago Skyline"/></span>
 							<p>Talk about the Chicago skyline by reading directly from this website:<br>
 								 <a href="http://wikitravel.org/en/Chicago_skyline_guide">About the Chicago Skyline</a><br>
 							<br>Or do whatever you want, including but not limited to:
