--- a/tour_guide_pages/louis.html
+++ b/tour_guide_pages/louis.html
@@ -53,7 +53,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Louis Hall Instructions</h1>
-							<span class="image main"><img align="right" src="https://www.communication.northwestern.edu/sites/default/files/facilities/Louis_WNUR960.jpg" alt="Image of Student In Louis Hall"/></span>
+							<span class="image main"><img align="right" src="https://www.communication.northwestern.edu/sites/default/files/facilities/Louis_WNUR960.jpg" style="width:60%;height:60%;margin-right:3%" alt="Image of Student In Louis Hall"/></span>
 							<p>Talk about Louis Hall by reading directly from the official website:<br>
 								 <a href="https://www.communication.northwestern.edu/learn/facilities/LouisHall">About Louis Hall</a><br>
 							<br>Or do whatever you want, including but not limited to:
