--- a/tour_guide_pages/marshall.html
+++ b/tour_guide_pages/marshall.html
@@ -53,7 +53,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Marshall Dance Center Instructions</h1>
-							<span class="image main"><img align="left"src="https://www.communication.northwestern.edu/sites/default/files/images/dance_center.jpg" style="margin-right:3%" alt="Image of Marshall Dance Center"/></span>
+							<span class="image main"><img align="right"src="https://www.communication.northwestern.edu/sites/default/files/images/dance_center.jpg" style="width:60%;height:60%;margin-right:3%" alt="Image of Marshall Dance Center"/></span>
 							<p>Talk about the Marshall Dance Center by reading directly from the official website:<br>
 								 <a href="https://www.communication.northwestern.edu/learn/facilities/MarshallDanceCenter">About Marshall Dance Center</a><br>
 							<br>Or do whatever you want, including but not limited to:
