--- a/tour_guide_pages/block.html
+++ b/tour_guide_pages/block.html
@@ -53,7 +53,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Block Museum Instructions</h1>
-							<span class="image main"><img align="right" src="http://blockmuseum.northwestern.edu/images/visit/buildingshot.jpg" alt="Image of Block Museum"/></span>
+							<span class="image main"><img align="right" src="http://blockmuseum.northwestern.edu/images/visit/buildingshot.jpg" style="width:60%;height:60%;margin-right:3%" alt="Image of Block Museum"/></span>
 							<p>Talk about the Block Museum by reading directly from this website:<br>
 								 <a href="http://www.blockmuseum.northwestern.edu/about/index.html">About the Block Museum</a><br>
 							<br>Or do whatever you want, including but not limited to:
