Fix Track it! link

--- a/track_it/currActivity.html
+++ b/track_it/currActivity.html
@@ -15,7 +15,7 @@
     <link href="./docs/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="./css/time_tracker.css" rel="stylesheet">
+    <link href="./css/main.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="./docs/assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -34,17 +34,17 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="./homepage.html">TRACK IT!</a>
+          <a class="navbar-brand" href="./index.html">TRACK IT!</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="./homepage.html">Home</a></li>
+            <li class="active"><a href="./index.html">Home</a></li>
             <li><a href="./todo_listed.html">To-Do</a></li>
             <li><a href="./analyze.html">Analyze Time</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <a href="./homepage_timeline.html" type="button" class="btn btn-primary navbar-btn">Track New Activity</a>
-            <a href="./homepage_timeline.html" type="button" class="btn btn-default navbar-btn">Stop Tracking</a>
+            <a href="./timeline.html" type="button" class="btn btn-primary navbar-btn">Track New Activity</a>
+            <a href="./timeline.html" type="button" class="btn btn-default navbar-btn">Stop Tracking</a>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -63,7 +63,7 @@
 
     <div class="col-sm-4">
         <span class="pull-right">
-          <a href="./homepage.html" type="button" class="btn btn-default" aria-label="Left Align">
+          <a href="./index.html" type="button" class="btn btn-default" aria-label="Left Align">
             <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>
           </a>
         </span>
@@ -77,7 +77,7 @@
         </div>
         <div><pre class="text-center" id="countUp" style="font-size: 36px">00 : 00 : 00<p>H       M       S</p></pre></div>
         <!-- <h3 class="text-center">HR  :  MIN  :  SEC</h3> -->
-        <a href="./homepage_timeline.html" class="btn btn-lg btn-default btn-block track" role="button">Stop Tracking</a>
+        <a href="./timeline.html" class="btn btn-lg btn-default btn-block track" role="button">Stop Tracking</a>
       </div>
     </div> <!-- /container -->
     <!-- <div id="test">
