--- a/track_it/todo_listed.html
+++ b/track_it/todo_listed.html
@@ -15,7 +15,7 @@
     <link href="./docs/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="./css/time_tracker.css" rel="stylesheet">
+    <link href="./css/main.css" rel="stylesheet">
     <link href="./css/todo.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
@@ -45,16 +45,16 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="./homepage.html">TRACK IT!</a>
+          <a class="navbar-brand" href="./index.html">TRACK IT!</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="./homepage.html">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li class="active"><a href="#">To-Do</a></li>
             <li><a href="./analyze.html">Analyze Time</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <a href="./homepage.html" type="button" class="btn btn-primary navbar-btn">Track New Activity</a>
+            <a href="./index.html" type="button" class="btn btn-primary navbar-btn">Track New Activity</a>
             <button type="button" class="btn btn-default navbar-btn">Stop Tracking</button>
           </ul>
         </div><!--/.nav-collapse -->
