--- a/track_it/index.html
+++ b/track_it/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>TimeTracker</title>
+    <title>TRACK IT!</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./docs/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -15,7 +15,7 @@
     <link href="./docs/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="./css/time_tracker.css" rel="stylesheet">
+    <link href="./css/main.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="./docs/assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -28,13 +28,13 @@
     <![endif]-->
   </head>
 
-  <body onload="gDate()">
+  <body>
 
     <!-- Fixed navbar -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Time Tracker</a>
+          <a class="navbar-brand" href="#">TRACK IT!</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -43,7 +43,7 @@
             <li><a href="./analyze.html">Analyze Time</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <!-- <a href="#" type="button" class="btn btn-primary navbar-btn track">Track New Activity</a>
+            <!-- <button type="button" class="btn btn-primary navbar-btn track">Track New Activity</button>
             <button type="button" class="btn btn-default navbar-btn">Stop Tracking</button> -->
           </ul>
         </div><!--/.nav-collapse -->
@@ -51,15 +51,14 @@
     </nav>
 
 
-    <div class='container-fluid timeline'>
+    <div class='container-fluid timeline' style="visibility:hidden;">
       <ul class='htimeline'>
-        <li data-date='' class='step col-sm-12 blue' id="date">
+        <li data-date='Feb. 10, 2017' class='step col-sm-12 orange'>
           <!-- <div>Inserted</div> -->
           <div class='tasks container-fluid'>
-              <div class='task col-sm-3' id="timeline">Untitled</div>
+              <div class='task col-sm-3'>Blank</div>
           </div>
         </li>
-      </ul>
     </div>
 
 
@@ -90,6 +89,9 @@
     </div>
 
 
+    <!-- <div id="test">
+      no data in sessionStorage
+    </div> -->
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
