Embellished on some posts.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@ Site Structure:
     <header>
       <h1><!--[-->Khoa Truong<!--]--></h1>
       <h2><!--[-->(website under construction)<!--]--></h2>
-      <p>This is a site to display some projects on which I have worked. Some posts are incomplete, but will be filled in soon. Click on "Khoa." above to return to this page from any post.</p>
+      <p>This is a site to display some projects on which I have worked. Some posts are incomplete, but will be filled in soon. Click on "Khoa." above to return to this page from any post.<br/>
+         My apologies for links, images, or videos that don't work. I haven't been able to test the website on many devices. </p>
     </header>
 {% assign styleNum = 0 %}
 {% assign imageNum = 0 %}
