--- a/index.html
+++ b/index.html
@@ -2,22 +2,24 @@
 layout: default
 ---
 <!--
-Website design:
+Website design adapted from:
 	Phantom by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 
-Site Structure:
-	Adapted from exercise files for a Lynda.com tutorial on Jekyll by James Williamson
+Site Structure adapted from:
+	Exercise files for a Lynda.com tutorial on Jekyll by James Williamson
 
-  Last updated 4/7/2017 by Khoa Truong
+  Last updated 6/23/2017 by Khoa Truong
 -->
 <main role="main" id="main">
   <div class="inner">
     <header>
       <h1><!--[-->Khoa Truong<!--]--></h1>
       <h2><!--[-->(website under construction)<!--]--></h2>
-      <p>This is a site to display some projects on which I have worked. Some posts are incomplete, but will be filled in soon. Click on "Khoa." above to return to this page from any post. My apologies for links, images, or videos that are broken. I haven't been able to test the website on many devices. </p>
+      <p>This is a site to display some projects on which I have worked. Some posts are incomplete, but will be filled in soon.
+        Click on "Khoa." above to return to this page from any post. My apologies for links, images, or videos that are broken.
+        I haven't tested the website on many devices. </p>
     </header>
 {% assign styleNum = 0 %}
 {% assign imageNum = 0 %}
