add new posts, proj map and tower defense

--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@ Site Structure adapted from:
 <main role="main" id="main">
   <div class="inner">
     <header>
-      <h1><!--[-->Khoa Truong<!--]--></h1>
-      <h2><!--[-->(website under construction)<!--]--></h2>
-      <p>This is a site to display some projects on which I have worked. Some posts are incomplete, but will be filled in soon.
-        Click on "Khoa." above to return to this page from any post. My apologies for links, images, or videos that are broken.
-        I haven't tested the website on many devices. </p>
+      <h1><!--[-->Works by Khoa Truong<!--]--></h1>
+      <p>Welcome! You've made it to my personal website. It's essentially a blog describing many of the projects
+        I've worked on in the past couple of years. Each square below is a post in which I briefly describe how the project came about
+        and how I contributed to it. I learn a lot from these projects just by nature of doing them, and I will sometimes have takeaways
+        that you may find helpful if you are working on projects that are similar to what I've done!</p>
+        <p>Finally, just so you're aware: you can click on "Khoa." above to return to this page from any post. My apologies for links,
+          images, or videos that do not work on your device. This is a work in progress. </p>
+          <p> Feel free to reach out to me for any reason. Links to my social media handles can be found at the bottom of each page. Enjoy!</p>
     </header>
 {% assign styleNum = 0 %}
 {% assign imageNum = 0 %}
